--- a/templates/default/choose/choosegpscoords.html
+++ b/templates/default/choose/choosegpscoords.html
@@ -14,16 +14,16 @@
 </script>{/if}
 {if $part == "main"}
 {include file="openlayers.html"}
-<script type="text/javascript">
-<!--
-	function init()
-	{
+<script>
+
+	function init() {
 		{include file="map.js"}
 
-		if (targetfield1.value.match(/^[0-9]+\.[0-9]+$/) && targetfield2.value.match(/^[0-9]+\.[0-9]+$/))
-			map = createMap(devices, devlinks, nodes, nodelinks, false, targetfield1.value, targetfield2.value);
-		else
-			map = createMap(devices, devlinks, nodes, nodelinks, false);
+		if (targetfield1.value.match(/^[0-9]+\.[0-9]+$/) && targetfield2.value.match(/^[0-9]+\.[0-9]+$/)) {
+			map = createMap(devices, devlinks, nodes, nodelinks, ranges, false, targetfield1.value, targetfield2.value);
+		} else {
+			map = createMap(devices, devlinks, nodes, nodelinks, ranges, false);
+		}
 
 		function click(e) {
 			var lonlat
@@ -46,7 +46,7 @@
 
         autoiframe_setsize('autoiframe');
 	}
-//-->
+
 </script>
 {/if}
 </head>
