--- a/css/map.less
+++ b/css/map.less
@@ -22,7 +22,7 @@
  *  $Id$
  */
 
-@import "lms-variables";
+@import "less/lms-variables";
 
 div.map {
 	position: absolute;
@@ -117,6 +117,23 @@ div.lmsMapPopupContents {
 	width: auto; height: auto;
 	white-space: nowrap;
 	overflow: visible;
+
+	ul {
+		margin-block-start: 0;
+		margin-block-end: 0;
+		padding-inline-start: 0;
+		list-style-position: inside;
+
+		li {
+			margin: 0;
+			padding: 0;
+
+			> span {
+				position: relative;
+				left: -0.7em;
+			}
+		}
+	}
 }
 
 div.lmsMapPopupName {
