bugfix: openlayers map: small layer switcher visual fix

--- a/css/map.less
+++ b/css/map.less
@@ -45,6 +45,10 @@ div.olPopupContent {
 	padding: 0px;
 }
 
+div.olControlLayerSwitcher {
+	width: auto;
+}
+
 div.lmsPopupTitleBar {
 	background-color: @dark;
 	white-space: nowrap;
